Add image to introduction/index.html
Added an image to the introduction page.

--- a/introduction/index.html
+++ b/introduction/index.html
@@ -4,6 +4,8 @@
 <title>WEBPROG SF241 Introduction</title>
 </head>
 <body>
+
+ <img src="https://share.google/images/Rbu3aNkX5SAbLc621" alt="Girl with a jacket" width="500" height="600">
  
 <h1>Personal Profile Web page of Francis Ryan Dichoso</h1>
 <p>
