Update image source in introduction/index.html
Replaced image source with a new URL related to Malupiton.

--- a/introduction/index.html
+++ b/introduction/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 
- <img src="https://share.google/images/Rbu3aNkX5SAbLc621" alt="Girl with a jacket" width="500" height="600">
+ <img src="http://googleusercontent.com/image_collection/image_retrieval/14769252037721636375_0" 
+         alt="Image related to Malupiton">
  
 <h1>Personal Profile Web page of Francis Ryan Dichoso</h1>
 <p>
