Replace image source with a new URL

--- a/introduction/index.html
+++ b/introduction/index.html
@@ -5,8 +5,7 @@
 </head>
 <body>
 
- <img src="http://googleusercontent.com/image_collection/image_retrieval/14769252037721636375_0" 
-         alt="Image related to Malupiton">
+<img src="https://www.w3schools.com/html/img_girl.jpg" alt="Girl with a jacket" width="500" height="600">
  
 <h1>Personal Profile Web page of Francis Ryan Dichoso</h1>
 <p>
