--- a/introduction/index.html
+++ b/introduction/index.html
@@ -1,23 +1,180 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>WEBPROG SF241 Introduction</title>
-</head>
-<body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Francis Ryan Dichoso | Cyber Portfolio</title>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-<img src="https://www.w3schools.com/html/img_girl.jpg" alt="Girl with a jacket" width="500" height="600">
- 
-<h1>Personal Profile Web page of Francis Ryan Dichoso</h1>
-<p>
- 
-About Me<br>
-Name:( Do not include birthdate / age / contact information)<br>
-Education / Achievements<br>
-Course <br>
-IT Experience<br>
-Hobbies & Interests<br>
-Goals In Life / Dream<br>
-Picture Gallery<br>
-</p>
-</body>
-</html>
+    <style>
+        /* --- AESTHETIC CORE STYLES --- */
+        :root {
+            --neon-blue: #00f2ff;
+            --deep-blue: #050a30;
+            --accent-purple: #7b2cbf;
+            --glass-bg: rgba(255, 255, 255, 0.05);
+            --glass-border: rgba(255, 255, 255, 0.1);
+        }
+
+        body {
+            font-family: 'Poppins', sans-serif;
+            /* Strong Blue Gradient Background */
+            background: linear-gradient(135deg, var(--deep-blue), #000428, #004e92);
+            background-size: 400% 400%;
+            animation: gradientBG 15s ease infinite;
+            color: #fff;
+            overflow-x: hidden;
+        }
+
+        @keyframes gradientBG {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        /* Custom Scrollbar */
+        ::-webkit-scrollbar { width: 10px; }
+        ::-webkit-scrollbar-track { background: var(--deep-blue); }
+        ::-webkit-scrollbar-thumb { background: var(--neon-blue); border-radius: 10px; }
+
+        /* Navbar Styling */
+        .navbar {
+            background-color: rgba(0, 0, 0, 0.7) !important;
+            backdrop-filter: blur(10px);
+            border-bottom: 1px solid var(--glass-border);
+        }
+        .navbar-brand {
+            font-weight: 700;
+            letter-spacing: 1px;
+            color: var(--neon-blue) !important;
+        }
+        .nav-link {
+            color: rgba(255,255,255,0.8) !important;
+            transition: 0.3s;
+            position: relative;
+        }
+        .nav-link::after {
+            content: '';
+            position: absolute;
+            width: 0;
+            height: 2px;
+            bottom: 5px;
+            left: 0;
+            background-color: var(--neon-blue);
+            transition: width 0.3s;
+        }
+        .nav-link:hover::after { width: 100%; }
+        .nav-link:hover { color: var(--neon-blue) !important; }
+
+        /* Glassmorphism Cards */
+        .glass-card {
+            background: var(--glass-bg);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+            border: 1px solid var(--glass-border);
+            border-radius: 15px;
+            padding: 2rem;
+            height: 100%;
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+        .glass-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 0 20px rgba(0, 242, 255, 0.2);
+            border-color: var(--neon-blue);
+        }
+
+        /* Neon Buttons */
+        .btn-neon {
+            background-color: transparent;
+            border: 2px solid var(--neon-blue);
+            color: var(--neon-blue);
+            padding: 10px 30px;
+            font-weight: 600;
+            transition: 0.3s;
+            box-shadow: 0 0 10px rgba(0, 242, 255, 0.3);
+        }
+        .btn-neon:hover {
+            background-color: var(--neon-blue);
+            color: var(--deep-blue);
+            box-shadow: 0 0 25px rgba(0, 242, 255, 0.6);
+        }
+
+        /* --- HERO SECTION & 3D AVATAR --- */
+        .hero-section {
+            padding: 150px 0 100px;
+            min-height: 90vh;
+            display: flex;
+            align-items: center;
+            position: relative;
+            overflow: hidden;
+        }
+        
+        /* 3D Avatar Floating Animation */
+        .avatar-container {
+            perspective: 1000px;
+        }
+        .avatar-3d {
+            width: 100%;
+            max-width: 450px;
+            height: auto;
+            /* Replace this URL with a real 3D render of a person/hacker */
+            /* Using a placeholder illustration that looks slightly 3D for now */
+            animation: float 6s ease-in-out infinite;
+            filter: drop-shadow(0 0 15px rgba(0, 242, 255, 0.4));
+        }
+        @keyframes float {
+            0% { transform: translateY(0px) rotateY(0deg); }
+            50% { transform: translateY(-25px) rotateY(5deg); }
+            100% { transform: translateY(0px) rotateY(0deg); }
+        }
+
+        /* Typewriter Cursor */
+        .typing-text {
+            color: var(--neon-blue);
+            font-weight: 600;
+        }
+        .typing-cursor {
+            display: inline-block;
+            width: 3px;
+            background-color: var(--neon-blue);
+            margin-left: 5px;
+            animation: blink 1s infinite;
+        }
+        @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0; } }
+
+        /* Section Titles */
+        .section-title {
+            position: relative;
+            display: inline-block;
+            margin-bottom: 50px;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+        .section-title::after {
+            content: '';
+            position: absolute;
+            left: 50%;
+            bottom: -10px;
+            transform: translateX(-50%);
+            width: 60px;
+            height: 3px;
+            background: linear-gradient(90deg, var(--neon-blue), var(--accent-purple));
+        }
+
+        /* Tech Badges (Glowing Chips) */
+        .tech-badge {
+            background: rgba(0, 242, 255, 0.1);
+            border: 1px solid var(--neon-blue);
+            color: #fff;
+            padding: 8px 16px;
+            border-radius: 4px;
+            margin: 5px;
+            font-size: 0.9rem;
+            display: inline-block;
+            transition: 0.3s;
+            box-shadow: 0 0 5px rgba(0, 242, 255,
